tests/type_errors/max_non_ord.nos
# expect_error: does not implement Ord
# max requires Ord trait
main() = max(x => x, y => y)
